Added CandidateService tests